--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <input type="button" value="Clear" id="clear">
         <input type="button" value="Delete" id="delete">
         <input type="button" value="Prev" id="prev">
-        <input type="button" value="New" id="current">
+        <select id="current"><option>New</option></select>
+        <!-- <input type="button" value="New" id="current"> -->
         <input type="button" value="Next" id="next">
-        <input type="button" value="Generate" id="generate">
+        <!-- <input type="button" value="Generate" id="generate"> -->
       </div>
       <div>
         <label for="waste-identifier">Waste Identifier</label>
