--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Waste Disposal</title>
   <script type="module" src="./index.js" defer></script>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body>
